# aegis-fabric

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: STATUS.md  scope.md
src/: decision.rs  event.rs  experiment.rs  lib.rs  main.rs  model.rs  replay.rs  rng.rs  sim.rs
tests/: properties.rs
